<resources>
    <string name="app_name">MovieApp</string>
    <string name="title_activity_movie_detail">MovieDetail</string>

    <string name="Welcome">Welcome to my MovieApp</string>
    <string name="message">Catch up on all things Cinema.</string>
    <string name="pick">Pick a section and explore the MovieApp</string>

    <string name="popularButton">Popular</string>
    <string name="upcoming">Upcoming</string>
    <string name="rated">Top Rated</string>
    <string name="playing">Now Showing</string>
    
    <string name="about">About</string>
    <string name="description">This is just a simple movie application using the TMDb API. All the movie data and categories is fetched from thought the API. This app has no commercial use and is only used for app development practice.</string>
    <string name="outtake">Short outtake from TMDb website:</string>
    <string name="link">https://www.themoviedb.org/</string>
    <string name="themoviedb">The Movie Database (TMDb) is a community built movie and TV database. Every piece of data has been added by our amazing community dating back to 2008. TMDb\'s strong international focus and breadth of data is largely unmatched and something we're incredibly proud of. Put simply, we live and breathe community and that's precisely what makes us different.</string>

</resources>
